--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@electron-forge/maker-zip": "^6.0.0-beta.63",
     "async": "^3.2.3",
     "electron": "18.0.3",
+    "lunr": "^2.3.9",
     "osenv": "^0.1.5"
   }
 }
